# DeepForge

./: .gitignore  README.md  cli.py  env.yaml.example  layout_demo.py  pyproject.toml  requirements.txt  setup.py  tui.py  visualize_tui.py
codex/: __init__.py  agent.py  config.py  constitution.py  session.py  sub_agent.py  types.py
codex/approval/: __init__.py  gate.py
codex/context/: __init__.py  window.py
codex/dispatch/: __init__.py  dispatcher.py
codex/models/: __init__.py  deepseek.py  tokenizer.py
codex/tools/: __init__.py  base.py  file_tools.py  git_tools.py  search_tools.py  shell_tools.py
deepforge/: __init__.py  agent.py  config.py  constitution.py  doctor.py  session.py  session_log.py  sub_agent.py  types.py
deepforge/approval/: __init__.py  gate.py
deepforge/audit/: __init__.py  summary.py
deepforge/computer/: __init__.py  browser.py
deepforge/context/: __init__.py  window.py
deepforge/dispatch/: __init__.py  dispatcher.py
deepforge/mcp/: __init__.py  config.py  manager.py  tools.py
deepforge/models/: __init__.py  azure.py  deepseek.py  fake.py  tokenizer.py
deepforge/tools/: __init__.py  base.py  browser_tools.py  file_tools.py  git_tools.py  sandbox.py  search_tools.py  shell_tools.py
tests/: __init__.py  test_integration.py
themes/: __init__.py  default.py  dragonball.py  worldcup.py
