[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepforge"
version = "0.1.0"
description = "CodeWhale Architecture in Python — AI coding agent with tool calling, context management, and parallel dispatch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DeepForge Contributors"}
]
keywords = ["ai", "coding-agent", "tool-calling", "deepseek", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
browser = [
    "playwright>=1.45.0",
]

[project.scripts]
deepforge = "cli:main"

[tool.setuptools.packages.find]
include = ["deepforge*"]
